syntax = "proto3";

package frontier.migration;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "frontier/migration/params.proto";
import "frontier/migration/token_migration.proto";
import "frontier/migration/acl.proto";

option go_package = "frontier/x/migration/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/frontier/migration/params";
  
  }
  
  // Queries a list of TokenMigration items.
  rpc TokenMigration    (QueryGetTokenMigrationRequest) returns (QueryGetTokenMigrationResponse) {
    option (google.api.http).get = "/frontier/migration/token_migration/{msgHash}";
  
  }
  rpc TokenMigrationAll (QueryAllTokenMigrationRequest) returns (QueryAllTokenMigrationResponse) {
    option (google.api.http).get = "/frontier/migration/token_migration";
  
  }
  
  // Queries a Acl by index.
  rpc Acl (QueryGetAclRequest) returns (QueryGetAclResponse) {
    option (google.api.http).get = "/frontier/migration/acl";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetTokenMigrationRequest {
  string msgHash = 1;
}

message QueryGetTokenMigrationResponse {
  TokenMigration tokenMigration = 1 [(gogoproto.nullable) = false];
}

message QueryAllTokenMigrationRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllTokenMigrationResponse {
  repeated TokenMigration                         tokenMigration = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination     = 2;
}

message QueryGetAclRequest {}

message QueryGetAclResponse {
  Acl Acl = 1 [(gogoproto.nullable) = false];
}

