syntax = "proto3";

package selfchain.migration;

import "gogoproto/gogo.proto";
import "selfchain/migration/params.proto";
import "selfchain/migration/token_migration.proto";
import "selfchain/migration/acl.proto";
import "selfchain/migration/migrator.proto";
import "selfchain/migration/config.proto";

option go_package = "selfchain/x/migration/types";

// GenesisState defines the migration module's genesis state.
message GenesisState {
           Params         params             = 1 [(gogoproto.nullable) = false];
  repeated TokenMigration tokenMigrationList = 2 [(gogoproto.nullable) = false];
           Acl            acl                = 3;
  repeated Migrator       migratorList       = 4 [(gogoproto.nullable) = false];
           Config         config             = 5;
}

